feat: nextjs -> vite

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 /** biome-ignore-all lint/complexity/noImportantStyles: overriding some library styles */
 @import "@rainbow-me/rainbowkit/styles.css";
 @import "./legacy.css";
-@import "./public/fonts/fonts.css";
+@import "/fonts/fonts.css";
 /* Tailwind CSS */
 @import "tailwindcss";
 
