chore: fix linting

--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -9,9 +9,10 @@
 
 @font-face {
   font-family: "Aeonik";
-  src: url("./Aeonik-Regular.woff2") format("woff2"),
-       url("./Aeonik-Regular.woff") format("woff"),
-       url("./Aeonik-Regular.ttf") format("truetype");
+  src:
+    url("./Aeonik-Regular.woff2") format("woff2"),
+    url("./Aeonik-Regular.woff") format("woff"),
+    url("./Aeonik-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -19,9 +20,10 @@
 
 @font-face {
   font-family: "Aeonik";
-  src: url("./Aeonik-Bold.woff2") format("woff2"),
-       url("./Aeonik-Bold.woff") format("woff"),
-       url("./Aeonik-Bold.ttf") format("truetype");
+  src:
+    url("./Aeonik-Bold.woff2") format("woff2"),
+    url("./Aeonik-Bold.woff") format("woff"),
+    url("./Aeonik-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -55,9 +57,10 @@
 /* Aeonik Mono Font Family */
 @font-face {
   font-family: "Aeonik Mono";
-  src: url("./AeonikMono-Regular.woff2") format("woff2"),
-       url("./AeonikMono-Regular.woff") format("woff"),
-       url("./AeonikMono-Regular.ttf") format("truetype");
+  src:
+    url("./AeonikMono-Regular.woff2") format("woff2"),
+    url("./AeonikMono-Regular.woff") format("woff"),
+    url("./AeonikMono-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -65,9 +68,10 @@
 
 @font-face {
   font-family: "Aeonik Mono";
-  src: url("./AeonikMono-Bold.woff2") format("woff2"),
-       url("./AeonikMono-Bold.woff") format("woff"),
-       url("./AeonikMono-Bold.ttf") format("truetype");
+  src:
+    url("./AeonikMono-Bold.woff2") format("woff2"),
+    url("./AeonikMono-Bold.woff") format("woff"),
+    url("./AeonikMono-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -76,6 +80,7 @@
 /* CSS Variables for Fonts */
 :root {
   --font-aeonik: "Aeonik", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  --font-aeonik-fono: "Aeonik Fono", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  --font-aeonik-fono:
+    "Aeonik Fono", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   --scp-font: "Source Code Pro", "Aeonik Mono", Consolas, "Courier New", monospace;
 }
