feat: add show all

--- a/packages/legacy/legacy.css
+++ b/packages/legacy/legacy.css
@@ -234,7 +234,7 @@
   }
 }
 .yearn--button-smaller {
-  @apply h-8 text-xs py-2 w-16 px-2;
+  @apply h-8 text-xs py-2 px-2;
 }
 .yearn--button-smaller.reverted {
   @apply text-neutral-900 bg-neutral-0 font-normal border border-transparent;
