fix: remove sorting from by vault

--- a/packages/legacy/style.css
+++ b/packages/legacy/style.css
@@ -146,8 +146,8 @@ body {
 }
 
 @layer components {
-  [role="button"],
-  button {
+  [role="button"]:not(:disabled),
+  button:not(:disabled) {
     @apply cursor-pointer;
   }
 }
