--- a/style.css
+++ b/style.css
@@ -431,6 +431,10 @@ body {
     @apply bg-neutral-300;
   }
 
+  &[data-variant="error"] {
+    @apply bg-red-50 text-red-700 border-red-200;
+  }
+
   /* Variant: Light */
   &[data-variant="light"] {
     @apply text-neutral-900 bg-neutral-100;
