--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
 
   --color-blue-500: hsl(220 95% 50%);
   --color-blue-800: hsl(230 93% 38%);
-  --color-blue-900: hsl(231 100% 11%);
+  --color-blue-900: hsl(231 100% 25%);
   --color-steel-gray-500: hsl(218 14% 71%);
   --color-light-blue-500: hsl(220 100% 67%);
   --default-rounded: 0rem;
@@ -213,7 +213,7 @@ body {
 ** Header an navbar
 ***************************************************************************************************/
 .yearn--header {
-  @apply inset-x-0 top-0 z-50 flex w-full max-w-[1200px] flex-row items-center justify-between pt-4 pb-1 text-xs sm:text-sm md:mb-0 md:px-0 md:text-base;
+  @apply inset-x-0 top-0 z-50 flex w-full max-w-[1200px] flex-row items-center justify-between pt-2 md:pt-4 pb-1 text-xs sm:text-sm md:mb-0 md:px-0 md:text-base;
   height: var(--header-height);
 }
 .yearn--nav {
